--- a/addons/terrain_3d/plugin.cfg
+++ b/addons/terrain_3d/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
 name="Terrain3D"
-description=""
+description="Heightmap terrain editor for Godot 4"
 author="Brain Limited"
-version="0.1"
+version="1.0"
 script="main.gd"
