Indexmap Overhaul and UI changes
Terrain particles now use indexmap correctly.
UI is completely done in code.
Remove 3D projection from shader for now.
Remove ORM texture from layer material.
Accept only DXT5 RGBA8 textures.

--- a/addons/terrain_3d/plugin.cfg
+++ b/addons/terrain_3d/plugin.cfg
@@ -2,6 +2,6 @@
 
 name="Terrain3D"
 description="Heightmap terrain editor for Godot 4"
-author="Brain Limited"
-version="1.0"
+author="Outobugi"
+version="2.0"
 script="main.gd"
