Move everything to Servers
Changes:
- Use Rendering and Physics servers
- Brushes now have visuals on terrain

--- a/addons/terrain_3d/plugin.cfg
+++ b/addons/terrain_3d/plugin.cfg
@@ -3,5 +3,5 @@
 name="Terrain3D"
 description="Heightmap terrain editor for Godot 4"
 author="Outobugi"
-version="2.0"
+version="1.0beta"
 script="main.gd"
